# streamlit-sigmajs

./: .gitignore  README.md  TAILWIND.md  pyproject.toml  setup.py
.github/: uv_build.yml
.github/workflows/: uv-build.yml
st_sigma/: __init__.py  example.py  query.ipynb  query.py
st_sigma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
st_sigma/frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
st_sigma/frontend/src/: App.css  App.tsx  index.css  index.tsx
st_sigma/frontend/src/components/: InteractiveGraph.css  InteractiveGraph.tsx  LegendPanel.tsx  PropertiesPanel.tsx  RelationshipPropertiesPanel.tsx  interactiveGraph.bak.tsx
st_sigma/frontend/src/utils/: colorUtils.ts  graphDataUtils.ts  types.ts
